<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Wallet.WalletActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My wallet"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="@+id/backBtn"
        app:layout_constraintStart_toEndOf="@+id/backBtn"
        app:layout_constraintTop_toTopOf="@+id/backBtn" />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_chevron_left_24"
        app:tint="@color/black" />


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:srcCompat="@drawable/wallet2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title">

        <Button
            android:id="@+id/add_cash"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="30dp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/round_10"
            android:backgroundTint="@color/W_blue"
            android:gravity="center"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="@color/W_black" />

        <Button
            android:id="@+id/send_cash"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="30dp"
            android:background="@drawable/round_10"
            android:backgroundTint="@color/W_red"
            android:gravity="center"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/black" />
    </LinearLayout>


    <Button
        android:id="@+id/transaction_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/round_10"
        android:backgroundTint="@color/W_black"
        android:drawableEnd="@drawable/ic_round_arrow_right_alt_24"
        android:drawableTint="@color/W_red"
        android:elevation="6dp"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:text="@string/transaction_history"
        android:textAllCaps="false"
        android:textColor="@color/W_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_15"
        android:backgroundTint="@color/white2"
        android:elevation="@dimen/_10sdp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_btn">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/line_chart"
            android:layout_width="180dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/_12sdp"
            android:layout_height="@dimen/_12sdp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/round_green_100"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#942636" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="Current Money"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <TextView
            android:id="@+id/current_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="TK 50/="
            android:textColor="@color/ass"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="@dimen/_12sdp"
            android:layout_height="@dimen/_12sdp"
            android:layout_marginTop="40dp"
            android:src="@drawable/round_green_100"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:tint="#FF5B00"/>

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="Send Money"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView6" />

        <TextView
            android:id="@+id/Send_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="TK 50/="
            android:textColor="@color/ass"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="@dimen/_12sdp"
            android:layout_height="@dimen/_12sdp"
            android:layout_marginTop="40dp"
            android:src="@drawable/round_green_100"
            app:layout_constraintStart_toStartOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            app:tint="#FFAC07" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="Add Money"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="@+id/imageView7" />

        <TextView
            android:id="@+id/Add_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="TK 50/="
            android:textColor="@color/ass"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="@+id/textView18"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />


    </androidx.constraintlayout.widget.ConstraintLayout>



    <TextView
        android:id="@+id/cash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="70dp"
        android:textColor="@color/black"
        android:textSize="@dimen/_30sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <TextView
        android:id="@+id/cardHolderNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/cash"
        app:layout_constraintTop_toBottomOf="@+id/cash" />

    <TextView
        android:id="@+id/cardNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="xxxx"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <ImageView
        android:id="@+id/qr_code"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardHolderNumber"
        app:layout_constraintStart_toEndOf="@+id/cardHolderNumber"
        app:layout_constraintTop_toTopOf="@+id/cardHolderNumber"
        app:srcCompat="@drawable/qr" />
</androidx.constraintlayout.widget.ConstraintLayout>